# EL_Projekt

./: CMakeLists.txt  README.md  main.c
IPC/: helper.cpp  helper.h  main.cpp  prozess_1.cpp  prozess_1.h  prozess_2.cpp  prozess_2.h  prozess_3.cpp  prozess_3.h
IPC/header/: gpio_control.h  helper.h  libgpiod.h  prozess_1.h  prozess_2.h  prozess_3.h
IPC/src/: gpio_control.cpp  helper.cpp  libgpiod.c  prozess_1.cpp  prozess_2.cpp  prozess_3.cpp
